--- a/mens.html
+++ b/mens.html
@@ -56,6 +56,12 @@
             <h3 class="des">Men Cotton Long Sleeveless Shrug</h3>
             <h3>₹799  <span class="cross"> ₹1499</span> <span class="per"> -47%</span></h3>
         </div>
+        <div class="nav">
+            <a href="">Home</a>
+            <a href="">Products</a>
+            <a href="">Cart</a>
+            <a href="">Signin/Signup</a>
+        </div>
     </div>
 </body>
 </html>
