--- a/mens.html
+++ b/mens.html
@@ -38,11 +38,21 @@
         .cross{
             text-decoration: line-through;
         }
+        .nav{
+          width: 90%;
+            
+        }
         
     </style>
     <title>mensPage</title>
 </head>
 <body>
+          <div class="nav">
+            <a href="">Reebok</a>
+            <a href="">Men</a>
+            <a href="">Women</a>
+            <a href="">Signup</a>
+        </div>
     <div id="box"> 
         <div>
             <img src="https://image.uniqlo.com/UQ/ST3/in/imagesgoods/452649/item/ingoods_30_452649.jpg?width=1600&impolicy=quality_75">
@@ -56,12 +66,7 @@
             <h3 class="des">Men Cotton Long Sleeveless Shrug</h3>
             <h3>₹799  <span class="cross"> ₹1499</span> <span class="per"> -47%</span></h3>
         </div>
-        <div class="nav">
-            <a href="">Home</a>
-            <a href="">Products</a>
-            <a href="">Cart</a>
-            <a href="">Signin/Signup</a>
-        </div>
+  
     </div>
-</body>
+</body> 
 </html>
